--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <provider
+            android:authorities="com.example.android.sunshine.app"
+            android:name="com.example.android.sunshine.app.data.WeatherProvider" >
+
+        </provider>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
