--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
 
         </provider>
 
+        <service android:name=".service.SunshineService"/>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
