--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.example.android.sunshine.app" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permissions required by the sync adapter -->
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application
         android:allowBackup="true"
@@ -11,14 +15,39 @@
         android:theme="@style/AppTheme" >
 
         <provider
-            android:authorities="com.example.android.sunshine.app"
-            android:name="com.example.android.sunshine.app.data.WeatherProvider"
+            android:authorities="@string/content_authority"
+            android:name=".data.WeatherProvider"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false"
+            android:syncable="true">
 
         </provider>
 
         <service android:name=".service.SunshineService"/>
+
+        <!-- SyncAdapter's dummy authentication service -->
+        <service android:name=".sync.SunshineAuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
+        <!-- The SyncAdapter service -->
+        <service android:name=".sync.SunshineSyncService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
+
+        <receiver android:name=".service.SunshineService$AlarmReceiver"
+            android:enabled="true" />
 
         <activity
             android:name=".MainActivity"
